Fixed issue with padding in mvp.css causing checkboxes to appear "stretched".

--- a/demo/demo.css
+++ b/demo/demo.css
@@ -46,3 +46,6 @@ body {
   content: "Resize me!";
   right: 0.85rem;
 }
+input[type=checkbox].dg-select-all, .dg-selectable input[type=checkbox] {
+    padding: initial;
+}
